--- a/main.html
+++ b/main.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+		<div>
+			<a href="https://youtu.be/rroV9NkEsnw?si=OhDjQhcr1fGg_dyD">My current favourite song is Hare Krishna</a>
+		</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
